# Portfolio

./: Cargo.toml  error.txt  index.html  tailwind.config.js
src/: main.rs  router.rs  ultils.rs
src/components/: about.rs  contact.rs  home.rs  mod.rs  pagenotfound.rs  project_display.rs  projects.rs  scrath.txt  sidebar.rs  toolbar.rs  util.rs
styles/: build.css  input.css  output.css
