[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
gloo-console = "0.2.3"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
web-sys = "0.3.64"
js-sys = "0.3"

gloo-net = "0.2.4"
serde = { version = "1.0.147", features = ["derive"] }
wasm-bindgen-futures = "0.4.33"

